examples/envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: jwt-auth
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: ANY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.wasm.skillz
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  pub_keys:
                    - |
                       -----BEGIN PUBLIC KEY-----
                       MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAu7fsv42vLLVA18tul5IG
[...]
                       ZwIDAQAB
                       -----END PUBLIC KEY-----
                    - |
                      -----BEGIN PUBLIC KEY-----
                      MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAz4hMWjr8/lbRQk2uMcRR
[...]
                      4wIDAQAB
                      -----END PUBLIC KEY-----
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters/filter.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: basic-auth
